initial setup complete

--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "mind-ui",
+  "name": "pixabay-image-api-react-example",
   "version": "1.0.0",
-  "description": "mind-ui",
+  "description": "pixabay-image-api-react-example",
   "main": "./src/index.js",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --progress --colors"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AkyunaAkish/mind-ui.git"
+    "url": "git+https://github.com/AkyunaAkish/pixabay-image-api-react-example.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/AkyunaAkish/mind-ui/issues"
+    "url": "https://github.com/AkyunaAkish/pixabay-image-api-react-example/issues"
   },
-  "homepage": "https://github.com/AkyunaAkish/mind-ui#readme",
+  "homepage": "https://github.com/AkyunaAkish/pixabay-image-api-react-example#readme",
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
@@ -25,6 +26,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.11",
+    "dotenv": "^5.0.1",
     "file-loader": "^1.1.11",
     "node-sass": "^4.9.0",
     "react": "^16.4.0",
